@@ -3,10 +3,12 @@ package snap.api.review.dto;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import org.springframework.data.domain.Sort;
 import snap.api.photographer.dto.response.PhotographerResponseDto;
 import snap.domains.photographer.entity.Photographer;
 import snap.domains.review.entity.Review;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,6 +22,6 @@ public class PhotographerReviewResponseDto {
     public PhotographerReviewResponseDto(List<Review> entities) {
         this.totalReview = entities.size();
         this.averageScore = (entities.stream().mapToDouble(Review::getScore).sum() / entities.size());
-        this.reviews = entities.stream().map(ReviewResponseDto::new).toList();
+        this.reviews = entities.stream().map(ReviewResponseDto::new).sorted(Comparator.comparing(ReviewResponseDto::getScore).reversed()).collect(Collectors.toList());
     }
 }
